      argument to versions.VersionFromString() to avoid the copy.  In
      a later version of Conary, version objects will be immutable.
      New methods will be introduced that return new modified objects.
    * Conary no longer hangs waiting for the download thread when an error
      occured in the download thread which caused it to terminate.

Changes in 1.0.29:
  o Bug Fixes:
    * Conary now removes sources from the lookaside before unpacking SRPMs to
      ensure that the source referenced from the SRPM is actually contained in
      the SRPM. (CNY-771)
    * Errors found in the recipe while checking in will now display file name
      and line number information along with the error found.
    * The trove browser no longer shows duplicate entries for multihomed
      repositories.
    * A bug that kept sqlite-based 64-bit mirrors from being used as a source 
      for further mirrors has been fixed.

  o Build Changes:
    * Conary no longer prints policy error messages three times; it
      now prints each error immediately when it is found, and then
      summarizes all policy errors once (instead of twice) at the
      end of the build process. (CNY-776)

Changes in 1.0.28:
  o Client Changes:
    * Migrate no longer replaces by default as if --replace-files was
      specified. (CNY-769)

  o Server Changes:
    * The log retrieval function now returns a HTTP_NOT_IMPLEMENTED
      (501) instead of a HTTP_NOT_FOUND (404) if the logFile
      directive is not configured.

  o Build Changes:
    * Conary now recognizes that pkgconfig finds its files in
      /usr/share/pkgconfig as well as /usr/lib*/pkgconfig. (CNY-754)
    * /etc/conary/mirrors/cran has been added to enable mirror://
      references to the Comprehensive R Archive Network. (CNY-761)

  o Bug Fixes:
    * Conary now resets the timeStamps in all cases when
      getSourceVersion is called (CNY-708).
    * SQLite ANALYZE locks the database after it is run, causing
      updates to fail.